# trustfall-gitlab-adapter

./: .gitignore  Cargo.toml  README.md  justfile
sample-queries/: contents-of-filtered-files.ron
src/: adapter.rs  main.rs  query.graphql  sample_query.graphql  schema.graphql  vertex.rs
