[package]
name = "trustfall-gitlab-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustfall = "0.4.0"
trustfall_core = "0.4.0"
tokio = { version = "1", features = ["full"] }
gitlab = "0.1510.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
lazy_static = { version = "1.4.0" }
ron = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "trustfall-gitlab-adapter"
path = "src/main.rs"

[dev-dependencies]
anyhow = "1.0.58"
itertools = "0.10.5"
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
maplit = "1.0.2"
version_check = "0.9.4"
